--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.13.0",
+    "autoprefixer": "^10.4.14",
     "next": "latest",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
